// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<I18nProvider> children get i18n from context 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <TestElement />,
  "nodes": Array [
    <TestElement />,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <I18nProvider
        i18n={
                Object {
                        "gettext": [Function],
                        "lang": "en-US",
                        "ngettext": [Function],
                        "npgettext": [Function],
                        "pgettext": [Function],
                      }
        }
>
        <TestElement />
</I18nProvider>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": I18nProvider {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "children": <TestElement />,
          "i18n": Object {
            "gettext": [Function],
            "lang": "en-US",
            "ngettext": [Function],
            "npgettext": [Function],
            "pgettext": [Function],
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <TestElement />,
        "_debugID": 2,
        "_renderedOutput": <TestElement />,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <I18nProvider
    i18n={
        Object {
            "gettext": [Function],
            "lang": "en-US",
            "ngettext": [Function],
            "npgettext": [Function],
            "pgettext": [Function],
          }
    }
>
    <TestElement />
</I18nProvider>,
}
`;

exports[`translate Component render translated component 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <TestElement
    i18n={
        Object {
            "gettext": [Function],
            "lang": "en-US",
            "ngettext": [Function],
            "npgettext": [Function],
            "pgettext": [Function],
          }
    }
/>,
  "nodes": Array [
    <TestElement
      i18n={
            Object {
                  "gettext": [Function],
                  "lang": "en-US",
                  "ngettext": [Function],
                  "npgettext": [Function],
                  "pgettext": [Function],
                }
      }
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Translate(TestElement)
        i18n={
                Object {
                        "gettext": [Function],
                        "lang": "en-US",
                        "ngettext": [Function],
                        "npgettext": [Function],
                        "pgettext": [Function],
                      }
        }
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {
          "i18n": undefined,
        },
        "props": Object {
          "i18n": Object {
            "gettext": [Function],
            "lang": "en-US",
            "ngettext": [Function],
            "npgettext": [Function],
            "pgettext": [Function],
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <TestElement
          i18n={
                    Object {
                              "gettext": [Function],
                              "lang": "en-US",
                              "ngettext": [Function],
                              "npgettext": [Function],
                              "pgettext": [Function],
                            }
          }
/>,
        "_debugID": 6,
        "_renderedOutput": <TestElement
          i18n={
                    Object {
                              "gettext": [Function],
                              "lang": "en-US",
                              "ngettext": [Function],
                              "npgettext": [Function],
                              "pgettext": [Function],
                            }
          }
/>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Translate(TestElement)
    i18n={
        Object {
            "gettext": [Function],
            "lang": "en-US",
            "ngettext": [Function],
            "npgettext": [Function],
            "pgettext": [Function],
          }
    }
/>,
}
`;
